--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -20,43 +20,16 @@ includeSourceDocuments()
 
 Run CleanAndJoinData.RMD first to ensure all_data data frame is in your local environment.
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Scatterplots
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-```{r eval = FALSE}
-
-#' Graphs the percentage of people with a bachelors vs. TreeCanopy and faceted by IncomeQuartile
-#'
-#' @return edu_treecanop_plot
-
-edu_treecanop_plot<-all_data%>%
-  ggplot(aes(x=TreeCanopyCover, y=Bachelors))+
-  geom_point(aes(color=IncomeQuartile))+
-  facet_grid(.~IncomeQuartile)
-
-edu_treecanop_plot
-
-```
-
-```{r eval = FALSE}
-#use ggplot to plot edication data versus income data
-#edu_inc_plot<-all_dataw%>%
-  #ggplot(aes(x=PercentOfAdults, y=Income))+
-  #geom_point(aes(color=EducationLevel))+
-  #facet_grid(EducationLevel~.)
-#View(all_data_narrow)
-#edu_inc_plot
-```
-
+~~~~~~~~~~~~~~~~~~
+Linear Regression
+~~~~~~~~~~~~~~~~~~
 ```{r eval = FALSE}
 #Linear Regerssion Time......
 library(statisticalModeling)
 library(rpart)
-#install.packages("rpart.plot")
 library(rpart.plot)
 library(stats)
 library(mosaicData)
-
 
 #Tree/eduaction regression
 et1<-lm(Bachelors~TreeCanopyCover, data=all_data)
@@ -67,18 +40,14 @@ stargazer::stargazer(et1, et2, et3, type="text",
  covariate.labels=c("Tree Canopy Cover","Urban Rank", "Median Income"), out="tree_edu.txt")
 
 #pollution/education regressions
-
-
 ep1<-lm(Bachelors~Pollution, data=all_data) 
 ep2<-lm(Bachelors~Pollution + UrbanCode, data=all_data)
 ep3<-lm(Bachelors~Pollution + UrbanCode + Income, data=all_data) 
-
 stargazer::stargazer(ep1, ep2, type="text",
  dep.var.labels=c("Percent of Adults with Bachelor's Deegree"),
  covariate.labels=c("Particulate Matter","Urban Rank", "Median Income"), out="polution_edu.txt")
 
 #green space/education regression
-
 gs1<-lm(Bachelors~AvailGreenSpace, data=filter(all_data, AvailGreenSpace < 10^6)%>%na.omit(all_data))
 gs2<-lm(Bachelors~AvailGreenSpace + UrbanCode, data=filter(all_data, AvailGreenSpace < 10^6)%>%na.omit(all_data))
 gs3<-lm(Bachelors~AvailGreenSpace + UrbanCode + Income, data=filter(all_data, AvailGreenSpace < 10^6)%>%na.omit(all_data))
@@ -93,11 +62,24 @@ ea3<-lm(Bachelors~arsenic +Income, data=all_data)
 stargazer::stargazer(ea1, ea2, ea3, type="text",
  dep.var.labels=c("Percentage of Adults with Bachelor's Degrees"),
  covariate.labels=c("Arsenic Level","Urban/Rural Classification","Median Income"), out="arsenic_edu.txt")
-
-
 ```
 
 ## Boxplots for air pollution, arsenic, and tree cover (Kana)
+~~~~~~~~~~~~~~
+Scatter Plots
+~~~~~~~~~~~~~~
+```{r eval = FALSE}
+#Graphs the percentage of people with a bachelors vs. TreeCanopy and faceted by IncomeQuartile
+
+edu_treecanop_plot<-all_data%>%
+  ggplot(aes(x=TreeCanopyCover, y=Bachelors))+
+  geom_point(aes(color=IncomeQuartile))+
+  facet_grid(.~IncomeQuartile)
+
+edu_treecanop_plot
+
+```
+
 ```{r}
 load("all_data.RData")
 library(ggplot2)
